Fixed image incorrectly stretching issue

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -58,12 +58,6 @@ div.social-share-button *{
   display: inline-block;
 }
 
-/* line 42, ../../app/assets/stylesheets/home.css.scss */
-/* line 37, ../../app/assets/stylesheets/home.css.scss */
-/* line 47, ../../app/assets/stylesheets/home.css.scss */
-div.meme-box.span4 img {
-  height: 100%;
-}
 
 /* line 46, ../../app/assets/stylesheets/home.css.scss */
 /* line 42, ../../app/assets/stylesheets/home.css.scss */
